# SoundProcessor

./: CMakeLists.txt  CommandsReader.cpp  ExceptionsHierarchy.cpp  MixConvertor.cpp  MuteConvertor.cpp  ReverseConvertor.cpp  input.txt  main.cpp
